# multi-arch-repackage

./: build.py  buildAll.bat
dependencies/: CMakeLists.txt  conanfile.py
dependencies/include/: hello.h
dependencies/src/: hello.cpp
driver/: CMakeLists.txt  conanfile.py
driver/src/: hello.cpp
installer/: CMakeLists.txt  conanfile.py
installer/src/: main.cpp
